--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-requests==2.32.5
-tinydb==4.8.
+certifi==2025.8.3
+charset-normalizer==3.4.3
+greenlet==3.2.4
+idna==3.10
+numpy==2.3.2
+playwright==1.54.0
+pyee==13.0.0
+requests==2.31.0
+shapely==2.1.1
+tinydb==4.8.0
+typing_extensions==4.15.0
+urllib3==2.5.0
